Complete the Like Button functionality